# nostromo-os

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.hpp  Terminal.cpp  Terminal.hpp  main.cpp
